--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "picar-x"]
 	path = picar-x
 	url = https://github.com/sunfounder/picar-x.git
+[submodule "robot-hat"]
+	path = robot-hat
+	url = https://github.com/sunfounder/robot-hat/tree/v2.0
+[submodule "vilib"]
+	path = vilib
+	url = https://github.com/sunfounder/vilib/tree/picamera2
